I added a code about myself

--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 </head>
   
 <body>
- <h1>Khaliyah</h1>
-  <p>  wordd is bonddddd  </p>
-  <p>yurrrr</p> 
-  <a href="https://www.youtube.com/"> youtube </a>
+ <h1>Khaliyah Harley</h1>
+    <p>My name is Khaliyah and i attend longwood preparatory acdemy.Im 5'10 and i play basketball.I was born in jamaica but i moved to the U.S.My favourite food is oxtail and rice peas.My favourite colour is pink.</p>
+   <img> https://images.app.goo.gl/J7F5YAZi9huyyeRd8</img>
   <script src="script.js"></script>
 
 </body>
